src/test/deca/context/invalid/created/wrongTypes/wrong_type_condition_while_FLOAT.deca
// Description:
//  Condition non boolean
// 
// Resultats:
//    Ligne 7 : Condition should be a boolean
{
    while (5.6) {
        println("true");
    } else {
        println("false");
    }
}